Создать связь между пользователем и задачами
