# internal/web/users/api.gen.go
@@ -14,6 +14,14 @@ import (
 	strictecho "github.com/oapi-codegen/runtime/strictmiddleware/echo"
 )
 
+// Task defines model for Task.
+type Task struct {
+	Id     *uint   `json:"id,omitempty"`
+	IsDone *bool   `json:"is_done,omitempty"`
+	Task   *string `json:"task,omitempty"`
+	UserId *uint   `json:"user_id,omitempty"`
+}
+
 // User defines model for User.
 type User struct {
 	Email    *string `json:"email,omitempty"`
@@ -41,6 +49,9 @@ type ServerInterface interface {
 	// Update the user by ID
 	// (PATCH /users/{id})
 	PatchUsersId(ctx echo.Context, id uint) error
+	// Get all tasks by User ID
+	// (GET /users/{user_id}/tasks)
+	GetTasksForUser(ctx echo.Context, userId uint) error
 }
 
 // ServerInterfaceWrapper converts echo contexts to parameters.
@@ -98,6 +109,22 @@ func (w *ServerInterfaceWrapper) PatchUsersId(ctx echo.Context) error {
 	return err
 }
 
+// GetTasksForUser converts echo context to params.
+func (w *ServerInterfaceWrapper) GetTasksForUser(ctx echo.Context) error {
+	var err error
+	// ------------- Path parameter "user_id" -------------
+	var userId uint
+
+	err = runtime.BindStyledParameterWithLocation("simple", false, "user_id", runtime.ParamLocationPath, ctx.Param("user_id"), &userId)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter user_id: %s", err))
+	}
+
+	// Invoke the callback with all the unmarshaled arguments
+	err = w.Handler.GetTasksForUser(ctx, userId)
+	return err
+}
+
 // This is a simple interface which specifies echo.Route addition functions which
 // are present on both echo.Echo and echo.Group, since we want to allow using
 // either of them for path registration
@@ -130,6 +157,7 @@ func RegisterHandlersWithBaseURL(router EchoRouter, si ServerInterface, baseURL 
 	router.POST(baseURL+"/users", wrapper.PostUsers)
 	router.DELETE(baseURL+"/users/:id", wrapper.DeleteUsersId)
 	router.PATCH(baseURL+"/users/:id", wrapper.PatchUsersId)
+	router.GET(baseURL+"/users/:user_id/tasks", wrapper.GetTasksForUser)
 
 }
 
@@ -201,6 +229,23 @@ func (response PatchUsersId200JSONResponse) VisitPatchUsersIdResponse(w http.Res
 	return json.NewEncoder(w).Encode(response)
 }
 
+type GetTasksForUserRequestObject struct {
+	UserId uint `json:"user_id"`
+}
+
+type GetTasksForUserResponseObject interface {
+	VisitGetTasksForUserResponse(w http.ResponseWriter) error
+}
+
+type GetTasksForUser200JSONResponse []Task
+
+func (response GetTasksForUser200JSONResponse) VisitGetTasksForUserResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(200)
+
+	return json.NewEncoder(w).Encode(response)
+}
+
 // StrictServerInterface represents all server handlers.
 type StrictServerInterface interface {
 	// Get all users
@@ -215,6 +260,9 @@ type StrictServerInterface interface {
 	// Update the user by ID
 	// (PATCH /users/{id})
 	PatchUsersId(ctx context.Context, request PatchUsersIdRequestObject) (PatchUsersIdResponseObject, error)
+	// Get all tasks by User ID
+	// (GET /users/{user_id}/tasks)
+	GetTasksForUser(ctx context.Context, request GetTasksForUserRequestObject) (GetTasksForUserResponseObject, error)
 }
 
 type StrictHandlerFunc = strictecho.StrictEchoHandlerFunc
@@ -331,6 +379,31 @@ func (sh *strictHandler) PatchUsersId(ctx echo.Context, id uint) error {
 		return err
 	} else if validResponse, ok := response.(PatchUsersIdResponseObject); ok {
 		return validResponse.VisitPatchUsersIdResponse(ctx.Response())
+	} else if response != nil {
+		return fmt.Errorf("unexpected response type: %T", response)
+	}
+	return nil
+}
+
+// GetTasksForUser operation middleware
+func (sh *strictHandler) GetTasksForUser(ctx echo.Context, userId uint) error {
+	var request GetTasksForUserRequestObject
+
+	request.UserId = userId
+
+	handler := func(ctx echo.Context, request interface{}) (interface{}, error) {
+		return sh.ssi.GetTasksForUser(ctx.Request().Context(), request.(GetTasksForUserRequestObject))
+	}
+	for _, middleware := range sh.middlewares {
+		handler = middleware(handler, "GetTasksForUser")
+	}
+
+	response, err := handler(ctx, request)
+
+	if err != nil {
+		return err
+	} else if validResponse, ok := response.(GetTasksForUserResponseObject); ok {
+		return validResponse.VisitGetTasksForUserResponse(ctx.Response())
 	} else if response != nil {
 		return fmt.Errorf("unexpected response type: %T", response)
 	}
